--- a/src/main/resources/templates/vistaListaPersonas.html
+++ b/src/main/resources/templates/vistaListaPersonas.html
@@ -6,16 +6,19 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-	<table>
+
+	<table class="table table-dark table-striped">
 		<thead>
 			<tr>
 				<th>Cédula</th>
 				<th>Nombre</th>
 				<th>Genero</th>
 				<th>Apellido</th>
+				<th>Acción</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -24,9 +27,24 @@
 				<td th:text="${persona.nombre}"></td>
 				<td th:text="${persona.genero}"></td>
 				<td th:text="${persona.apellido}"></td>
+
+				<td>
+					<form action="#" th:action="@{/personas/buscarPersona/{id}(id=${persona.id})}" th:object="${persona}"
+						th:method="GET">
+						<input type="submit" value="Editar">
+					</form>
+				</td>
+
+				<td>
+					<form action="#" th:action="@{/personas/borrar/{id}(id=${persona.id})}" th:object="${persona}"
+						th:method="DELETE">
+						<input type="submit" value="Borrar" class="btn btn-success">
+					</form>
+				</td>
 			</tr>
 		</tbody>
 	</table>
+
 </body>
 
 </html>
